[tool.poetry]
name = "imagination"
version = "0.1.0"
description = "A simple media processing api."
authors = ["davidstyers <dstyers2@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
